[package]
name = "routeguide"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "routeguide-server"
path = "src/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/client.rs"


[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
rand = "0.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
async-stream = "0.3.6"
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build = "0.12.3"

